<resources>
    <string name="app_name">Smart Shop</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="change_theme">change_theme</string>
    <string name="irr">تومان</string>
    <string name="search">search</string>
    <string name="buy">خرید</string>
    <string name="history">History</string>
    <string name="order_code">کد سفارش</string>
    <string name="sign_in">ورود به حساب کاربری</string>
    <string name="sign_up">ساخت حساب کاربری</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="username">نام کاربری</string>
    <string name="email">ایمیل</string>
    <string name="profile">Profile</string>
    <string name="sign_out">خروج از حساب کاربری</string>
    <string name="order_complete">تایید خرید</string>
    <string name="sale">تومان تخفیف</string>
    <string name="order">Order</string>
    <string name="show_all">مشاهده همه</string>
    <string name="customer_review">ٔدیدگاه کاربران</string>
    <string name="write_your_review">دیدگاه خود را درباره این کالا بنویسید</string>
    <string name="very_bad">خیلی بد</string>
    <string name="bad">بد</string>
    <string name="normal">معمولی</string>
    <string name="good">خوب</string>
    <string name="perfect">عالی</string>
    <string name="fill_star_field">لطفا موارد مشخص شده با ستاره را پر نمایید!</string>
    <string name="your_review_with_id">نظر شما با موفقیت با شماره</string>
    <string name="submitted">ثبت شد</string>
    <string name="not_suggesting">توصیه می‌کنم</string>
    <string name="suggesting">توصیه می‌کنم</string>
    <string name="not_sure">مطمئن نیستم</string>
    <string name="create_your_review">دیدگاه خود را شرح دهید</string>
    <string name="review_title">عنوان نظر</string>
    <string name="positive_point">نقاط قوت</string>
    <string name="negative_point">نقاط ضعف</string>
    <string name="review_body">متن نظر *</string>
    <string name="send_review_as_unknown">ارسال دیدگاه به صورت ناشناس</string>
    <string name="submit_review">ثبت دیدگاه</string>
    <string name="submin_review_is_meaning">ثبت دیدگاه, به معنی موافقت با</string>
    <string name="woocommerce_rule">قوانین ووکامرز</string>
    <string name="is">است.</string>
    <string name="coupon_code">کد تخفیف</string>
    <string name="submit_coupon">ثبت کد تخفیف</string>
    <string name="abcdefg">ABCDEFG</string>
    <string name="your_request_status_is_complete">سبد خرید شما با موفقیت ثبت شد</string>
    <string name="coupon_added">کد تخفیف با موفقیت اعمال شد</string>
    <string name="coupon_code_already_used">کد تخفیف تکراری می‌باشد!</string>
    <string name="order_id">شماره سبد</string>
    <string name="price">قیمت</string>
    <string name="discount">تخفیف</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="apply_coupon">اعمال کد تخفیف</string>
    <string name="buying">انجام خرید</string>
    <string name="notification">Notification</string>
    <string name="setting">تنظیمات</string>
    <string name="intered_value_is_not_acceptable">مقدار وارد شده صحیح نمی‌باشد!</string>
    <string name="per_3_hour">۳ ساعت</string>
    <string name="per_5_hour">۵ ساعت</string>
    <string name="per_8_hour">۸ ساعت</string>
    <string name="per_12_hour">۱۲ ساعت</string>
    <string name="apply">Apply</string>
    <string name="hour">Hour</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
</resources>